<resources>
    <string name="app_name">Wienerberger Application</string>
    <string name="logo_image_description">Wienerberger logo</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="app_description">Administrator Application</string>
    <string name="error_no_connection">"Connection error, try again later."</string>
    <string name="login_failed_credentials">"Invalid credentials."</string>
    <string name="action_next">Next</string>
    <string name="add_ticket">Add Ticket</string>
    <string name="create_new_ticket">Create new ticket</string>
    <string name="update">Update</string>
    <string name="back">Back</string>
    <string name="first_name">First name</string>
    <string name="phone_num">Phone num</string>
    <string name="fax_num">Fax num</string>
    <string name="e_mail">E-mail</string>
    <string name="last_name">Last name</string>
    <string name="title">Title</string>
    <string name="profile">Profile</string>
    <string name="orders">Orders</string>
    <string name="material_balance_view">Material balance</string>
    <string name="support_tickets">Support tickets</string>
    <string name="delivery_notes">Delivery notes</string>
    <string name="empty" />
    <string name="address">Address</string>
    <string name="home">Home</string>
    <string name="customers">Customers</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="create">Create</string>
    <string name="ticket_subject">Subject</string>
    <string name="ticket_status">Status</string>
    <string name="status_new">New</string>
    <string name="status_resolved">Resolved</string>
    <string name="status_inprogress">In-progress</string>
    <string name="ticket_details_title">Details of ticket</string>
    <string name="ticket_resolve_message">Resolve message</string>
    <string name="ticket_message">Message</string>
    <string name="subject_input_error">Subject not valid!</string>
    <string name="message_input_error">Message not valid!</string>
    <string name="ticket_created">Ticket created!</string>
    <string name="generic_error_message">There was an error.</string>
    <string name="status_unknown">Unknown status</string>
    <string name="order_name">Name:</string>
    <string name="order_status">Status:</string>
    <string name="order_1a">Order 1A</string>
    <string name="order_in_progress">In-progress</string>
    <string name="order_date">12/03/2021</string>
    <string name="order_date_of">Date of order:</string>
    <string name="order_payment_method">Payment method:</string>
    <string name="order_delivery_date">Delivery date:</string>
    <string name="delivery_date">12/23/2021</string>
    <string name="order_credit_card">Credit card</string>
    <string name="order_details_title">Details of order</string>
    <string name="order_details_name">Name</string>
    <string name="order_details_status">Status</string>
    <string name="order_details_date">Date of order</string>
    <string name="order_details_payment_method">Payment method</string>
    <string name="order_details_delivery_date">Delivery date</string>
    <string name="order_details_currency">Currency</string>
    <string name="order_details_additional_project_info">Additional project info</string>
    <string name="delivery_notes_data_range">Please select a date range no greater than 6 months.</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="delivery_note_number">Delivery Note Number</string>
    <string name="delivery_order_number">Order Number</string>
    <string name="request">Request</string>
    <string name="delivery_note_id">Delivery note ID:</string>
    <string name="delivery_note_order_number">Order number:</string>
    <string name="delivery_note_ship_to_party">Ship-to-party:</string>
    <string name="delivery_note_example_id">0532498326</string>
    <string name="delivery_note_example_order_number">0213214259</string>
    <string name="delivery_note_example_ship_to_party">NORTH GEORGIA BRICK CO-DISTR NORTH GEORGIA BRICK CO-DISTR</string>
    <string name="delivery_note_example_delivered_date">05/06/20</string>
    <string name="remember_current_login">Remember current login</string>
    <string name="choose_login_method">Choose login method:</string>
    <string name="classic_login">Classic login</string>
    <string name="pin_login">PIN Login</string>
    <string name="fingerprint_login">Fingerprint Login</string>
    <string name="material_balance_id">ID:</string>
    <string name="material_balance_name">Name:</string>
    <string name="material_balance_quantity">Quantity:</string>
    <string name="material_balance_example_quantity">100</string>
    <string name="material_balance_example_name">Wood 10m</string>
    <string name="material_balance_example_id">10</string>
    <string name="material_balance">Material balance</string>
    <string name="failed_pin_login_attempt">Attempt</string>
    <string name="pin_description">4-digit PIN:</string>
    <string name="enter_new_pin_message">Enter new PIN to overwrite current value.</string>
    <string name="login_fingerprint_temporary_lockout_error">Fingerprint sensor reports too many failed attempts. It will reenable shortly.</string>
    <string name="login_fingerprint_permanent_lockout_error">Fingerprint login has been permanently disabled. Please unlock it in the settings before proceeding.</string>
    <string name="hamburger_menu">Hamburger Menu</string>
    <string name="logout_icon">Logout Icon</string>
    <string name="error_check_field">Check this field</string>
    <string name="info_user_data_updated">User data successfully updated!</string>
    <string name="error_check_fields">Check fields for errors</string>
    <string name="reset">Reset</string>
    <string name="no_orders_available">No orders available for selected customer.</string>
    <string name="no_materials_found">No materials available for selected customer.</string>
</resources>