<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:background="@drawable/item_divider">

    <TextView
            android:id="@+id/labelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_name"
            android:width="125dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold" />

    <TextView
            android:id="@+id/labelStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_status"
            android:width="125dp"
            app:layout_constraintTop_toBottomOf="@+id/labelName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/labelName"
            android:textStyle="bold" />

    <TextView
            android:id="@+id/labelDateOfOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_date_of"
            android:width="125dp"
            app:layout_constraintTop_toBottomOf="@+id/labelStatus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/labelStatus"
            android:textStyle="bold" />

    <TextView
            android:id="@+id/labelPaymentMethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_payment_method"
            android:width="125dp"
            app:layout_constraintTop_toBottomOf="@+id/labelDateOfOrder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/labelDateOfOrder"
            android:textStyle="bold" />

    <TextView
            android:id="@+id/labelDeliveryDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_delivery_date"
            android:width="125dp"
            app:layout_constraintTop_toBottomOf="@+id/labelPaymentMethod"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/labelPaymentMethod"
            android:textStyle="bold" />

    <TextView
            android:id="@+id/tv_order_name"
            tools:text="@string/order_1a"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_order_status"
            app:layout_constraintStart_toEndOf="@+id/labelStatus"
            android:layout_toEndOf="@+id/labelStatus"
            android:layout_marginStart="20dp" />

    <TextView
            android:id="@+id/tv_order_status"
            tools:text="@string/order_in_progress"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_order_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/labelStatus"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_below="@+id/tv_order_name"
            android:layout_toEndOf="@+id/labelStatus" />

    <TextView
            android:id="@+id/tv_order_date"
            tools:text="@string/order_date"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_order_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/labelStatus"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_below="@+id/tv_order_status"
            android:layout_toEndOf="@+id/labelDateOfOrder" />

    <TextView
            android:id="@+id/tv_order_payment_method"
            tools:text="@string/order_credit_card"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/tv_order_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/labelPaymentMethod"
            android:layout_below="@+id/tv_order_date"
            android:layout_toEndOf="@+id/labelPaymentMethod"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp" />

    <TextView
            android:id="@+id/tv_order_delivery_date"
            tools:text="@string/delivery_date"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/tv_order_payment_method"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/labelDeliveryDate"
            android:layout_below="@+id/tv_order_payment_method"
            android:layout_toEndOf="@+id/labelDeliveryDate"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp" />

</RelativeLayout>