<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:background="@drawable/item_divider">

    <TextView
            android:id="@+id/labelID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_note_id"
            android:width="125dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold" />

    <TextView
            android:id="@+id/labelOrderNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_note_order_number"
            android:width="125dp"
            app:layout_constraintTop_toBottomOf="@+id/labelID"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/labelID"
            android:textStyle="bold" />

    <TextView
            android:id="@+id/labelShipToParty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_note_ship_to_party"
            android:width="125dp"
            app:layout_constraintTop_toBottomOf="@+id/labelOrderNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tv_delivery_ship_to_party"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/labelOrderNumber"
            android:layout_alignBottom="@id/tv_delivery_ship_to_party"
            android:textStyle="bold" />

    <TextView
            android:id="@+id/labelDeliveredDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/material_balance_quantity"
            android:width="125dp"
            app:layout_constraintTop_toBottomOf="@+id/labelShipToParty"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_delivery_delivered_date"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/labelShipToParty"
            android:textStyle="bold" />

    <TextView
            android:id="@+id/tv_delivery_note_id"
            tools:text="@string/delivery_note_example_id"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/labelID"
            android:layout_toEndOf="@+id/labelID"
            android:layout_marginStart="20dp" />

    <TextView
            android:id="@+id/tv_delivery_order_number"
            tools:text="@string/delivery_note_example_order_number"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/labelOrderNumber"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_below="@+id/tv_delivery_note_id"
            android:layout_toEndOf="@+id/labelOrderNumber" />

    <TextView
            android:id="@+id/tv_delivery_ship_to_party"
            tools:text="@string/delivery_note_example_ship_to_party"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/labelShipToParty"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_below="@+id/tv_delivery_order_number"
            android:layout_toEndOf="@+id/labelShipToParty" />

    <TextView
            android:id="@+id/tv_delivery_delivered_date"
            tools:text="@string/delivery_note_example_delivered_date"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/labelDeliveredDate"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_below="@+id/tv_delivery_ship_to_party"
            android:layout_toEndOf="@+id/labelDeliveredDate" />

</RelativeLayout>