<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:background="@drawable/item_divider">

    <TextView
            android:id="@+id/labelID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/material_balance_id"
            android:width="125dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold" />

    <TextView
            android:id="@+id/labelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/material_balance_name"
            android:width="125dp"
            app:layout_constraintTop_toBottomOf="@+id/labelID"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/labelID"
            android:textStyle="bold" />

    <TextView
            android:id="@+id/labelQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/material_balance_quantity"
            android:width="125dp"
            app:layout_constraintTop_toBottomOf="@+id/labelName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/labelName"
            android:textStyle="bold" />

    <TextView
            android:id="@+id/tv_material_balance_id"
            tools:text="@string/material_balance_example_id"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/labelID"
            android:layout_toEndOf="@+id/labelID"
            android:layout_marginStart="20dp" />

    <TextView
            android:id="@+id/tv_material_balance_name"
            tools:text="@string/material_balance_example_name"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/labelName"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_below="@+id/tv_material_balance_id"
            android:layout_toEndOf="@+id/labelName" />

    <TextView
            android:id="@+id/tv_material_balance_quantity"
            tools:text="@string/material_balance_example_quantity"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/labelQuantity"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_below="@+id/tv_material_balance_name"
            android:layout_toEndOf="@+id/labelQuantity" />

</RelativeLayout>