<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
                name="orderDetailsViewModel"
                type="com.ecxfoi.wbl.wienerbergerfrontend.ui.main.orders.OrderDetailsViewModel" />
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:layout_marginBottom="30dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="100dp"
                android:orientation="vertical"
                android:layout_margin="20dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/order_details_title"
                    android:textColor="@color/dark_grey"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:paddingBottom="25dp"
                    android:textAlignment="center" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/order_details_name" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_grey"
                    android:textSize="25sp"
                    tools:text="Missing materials"
                    android:text="@{orderDetailsViewModel.orderData.name}" />

            <TextView
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/order_details_status" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_grey"
                    android:textSize="25sp"
                    tools:text="New"
                    android:text="@{orderDetailsViewModel.orderData.status}" />

            <TextView
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/order_details_date" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_grey"
                    android:textSize="25sp"
                    tools:text="12/01/2021"
                    android:text="@{orderDetailsViewModel.orderData.dateOfOrder.toString()}" />

            <TextView
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/order_details_payment_method" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_grey"
                    android:textSize="25sp"
                    tools:text="Credit card"
                    android:text="@{orderDetailsViewModel.orderData.paymentMethod}" />

            <TextView
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/order_details_delivery_date" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_grey"
                    android:textSize="25sp"
                    tools:text="12/15/2021"
                    android:text="@{orderDetailsViewModel.orderData.deliveryDate.toString()}" />

            <TextView
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/order_details_currency" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_grey"
                    android:textSize="25sp"
                    tools:text="Euro (€)"
                    android:text="@{orderDetailsViewModel.orderData.currency}" />

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/aditional_project_info"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:visibility="@{orderDetailsViewModel.orderData.additionalProjectInfo.length() > 0 ? View.VISIBLE : View.GONE}">

                <com.google.android.material.textfield.TextInputEditText
                        android:enabled="false"
                        android:textColor="@color/dark_grey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/order_details_additional_project_info"
                        app:hintTextAppearance="?attr/textAppearanceCaption"
                        android:gravity="start"
                        android:inputType="textMultiLine"
                        android:layout_marginBottom="20dp"
                        android:textSize="20sp"
                        android:text="@{orderDetailsViewModel.orderData.additionalProjectInfo}" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>
</layout>